# llm-scratch

./: .gitignore  README.md  ffi_extension_examples.py  pyproject.toml
blog/: ZeRO.md  attention.md  distributed.md  gpu_kernels.md  hybrid.md  inference.md  perf.md  precision.md  scaling.md
csrc/: gemm.cu  main.cpp
inference/: decoding.py  kvcache.py
kernel/: mat_vect.py
kernel/everyday/: cutlass_add.py  triton_add.py
llm/: attention.py  autocast_example.py  block.py  mlp.py  moe.py  norm.py  rope.py  yarn.py
loss/: cross_entropy.py  dpo.py  grpo.py  gspo.py
operations/: flashattention.py
optimizer/: adamw.py
perf/: lora.py
profiler/: __init__.py  profiler.py
tokenizer/: Cargo.toml  README.md  bpe.ipynb  pyproject.toml
tokenizer/src/: lib.rs  merger.rs
