[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tokenizer"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
compact_str = "0.9.0"
dary_heap = "0.3.8"
fancy-regex = "0.16.2"
log = "0.4.28"
pyo3 = "0.25.0"
rayon = "1.11.0"
